Refatorando cliente e dependencias