@@ -25,6 +25,7 @@ import java.math.BigDecimal;
 import java.math.MathContext;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 public class AtivoServiceImpl implements AtivoService {
@@ -109,7 +110,7 @@ public class AtivoServiceImpl implements AtivoService {
         List<Ativo> ativos = ativoRepository.findAll();
         return ativos.stream()
                 .map(AtivoResponseDTO::new)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
